# nn-demos

./: .gitmodules  CMakeLists.txt  README.md  config.hpp  graphics.hpp  http.hpp  job.hpp  mnist.cpp  parser.hpp
mnist/: config.hpp  index.html  job.hpp  mnist.cpp
mnist/styles/css/: style.css
mnist/styles/js/: materialize.js
rmva/: config.hpp  index.html  job.hpp  rmva.cpp
styles/css/: materialize.css  materialize.min.css
